# VKraft

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  VKraft.sln
VKraft/: Camera.cpp  Camera.h  Cube.cpp  Cube.h  Cursor.psd  PerlinNoise.cpp  PerlinNoise.h  Utils.h  VKraft.vcxproj  VKraft.vcxproj.filters  VLKUtils.cpp  VLKUtils.h  comp.spv  cube-frag.spv  cube-geom.spv  cube-vert.spv  cube.comp  cube.frag  cube.geom  cube.vert  cursor-frag.spv  cursor-vert.spv  cursor.frag  cursor.vert  font-frag.spv  font.frag  frag.spv  geom.spv  lodepng.cpp  main.cpp  vexl.cpp  vexl.h
include/vulkan/: vulkan.h
res/: bg-frag.spv  bg-vert.spv  bg.frag  bg.vert  cube-frag.spv  cube-vert.spv  cube.frag  cube.vert  cube.vert_old.vert  cursor-frag.spv  cursor-vert.spv  cursor.frag  cursor.vert  font-frag.spv  font-vert.spv  font.frag  font.vert  heightmap.comp.glsl  heightmap.spv  raycast-comp.spv  raycast.comp  world-gen.comp.glsl  world-gen.spv
src/: Application.cpp  Application.h  BG.cpp  BG.h  Base.h  CMakeLists.txt  Camera.cpp  Camera.h  Camera_old.cpp  Camera_old.h  Chunk.cpp  Chunk.h  ChunkManager.cpp  ChunkManager.h  ChunkRenderer.cpp  ChunkRenderer.h  Cube.cpp  Cube.h  Cursor.cpp  Cursor.h  FastNoise.h  FontEngine.cpp  FontEngine.h  TextObject.cpp  TextObject.h  Texture.cpp  Texture.h  Utils.cpp  Utils.h  VLKUtils.cpp  VLKUtils.h  lodepng.h  main.cpp  master.cpp  master.h  vexl.cpp
vexl/: vexl.py  vexl_define.txt  vexl_header.txt  vexl_loader.txt  vulkan_funcs.txt
